# django-rest-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_rest_api/django_rest_api/: settings.py
django_rest_api/store/: admin.py  api_views.py  models.py  serializers.py  tests.py  urls.py  views.py
django_rest_api/store/migrations/: 0001_initial.py
django_rest_api/store/templates/store/: product.html
store/: models.py  views.py
