[tool.poetry]
name = "django-rest-api"
version = "0.1.0"
description = ""
authors = ["Tian Jie Wong <wtj.wongtianjie@gmail.com>"]
readme = "README.md"
packages = [{include = "django_rest_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.1"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
